<resources>
    <string name="app_name">CrazyAlarm</string>
    <string name="intro_message">Welcome to <b>Scheduler</b>!
        This sample demonstrates how you can schedule an alarm that causes a service to
        be started. This is useful when you want to schedule alarms that initiate
        long-running operations. Click START ALARM to activate an alarm to check
        the Google home page for a custom doodle once a day. If the app finds a doodle,
        it posts a \"Doodle Alert\" as a notification. Click CANCEL ALARM to cancel the
        alarm. Once the alarm is active, it automatically restarts when the device is
        rebooted.</string>
    <string name="start_text">Start Alarm</string>
    <string name="cancel_text">Cancel Alarm</string>
    <string name="doodle_alert">Doodle Alert</string>
    <string name="doodle_found">There is a Google doodle today!!</string>
    <string name="no_doodle">No Google doodle today.</string>
    <string name="connection_error">Connection error.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="empty_hour">00:00</string>
    <string name="never">Never</string>
    <string name="repeat">Repeat</string>
    <string name="default_text">Default</string>
    <string name="ringtone">Ringtone</string>
    <string name="vibrate">Vibrate</string>
    <string name="alarm_off_method">Alarm off method</string>
    <string name="the_way_you_want_to_turn_off_alarm">The way you want to turn off ALARM!</string>
    <string name="time_picker">TimePicker</string>
    <string name="select_day">Select Day</string>
    <string name="select_ringtone">Select RingTone</string>
    <string name="turn_off_method">Turn Alarm off Method</string>
    <string name="Monday">" Monday "</string>
    <string name="Tuesday">" Tuesday "</string>
    <string name="Wednesday">" Wednesday "</string>
    <string name="Thursday">" Thursday "</string>
    <string name="Friday">" Friday "</string>
    <string name="Saturday">" Saturday "</string>
    <string name="Sunday">" Sunday "</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>

    <string-array name="days_array">
        <item>@string/Monday</item>
        <item>@string/Tuesday</item>
        <item>@string/Wednesday</item>
        <item>@string/Thursday</item>
        <item>@string/Friday</item>
        <item>@string/Saturday</item>
        <item>@string/Sunday</item>
    </string-array>

    <string name="take_photo">Take a photo</string>
    <string name="Calculator">Calculator</string>
    <string name="alarm_not_saved">Your alarm not save</string>
    <string-array name="turn_off_method">
        <item>@string/take_photo</item>
        <item>@string/Calculator</item>
    </string-array>

    <string name="time_format" formatted="false">%s : %s</string>
</resources>
