<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.AlarmActivity"
    tools:showIn="@layout/activity_alarm">

    <LinearLayout
        android:id="@+id/ll_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/alarmTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="Time"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alarmText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/empty_hour"
            android:textColor="@color/colorAccent" />

        <include layout="@layout/layout_divider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_time"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/repeatTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/repeat"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/repeatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/never"
            android:textColor="@color/colorAccent" />

        <include layout="@layout/layout_divider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_ring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_repeat"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ringTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/ringtone"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ringText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/default_text"
            android:textColor="@color/colorAccent" />

        <include layout="@layout/layout_divider" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_ring"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vibrateTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/vibrate"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vibrateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vibrateTextTitle"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/default_text"
            android:visibility="invisible"
            android:textColor="@color/colorAccent" />

        <CheckBox
            android:id="@+id/cb_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <include
            layout="@layout/layout_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/vibrateText" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_turn_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_vibrate"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/turnOffTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/alarm_off_method"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/turnOffText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/the_way_you_want_to_turn_off_alarm"
            android:textColor="@color/colorAccent" />

        <include layout="@layout/layout_divider" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_set_alarm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_turn_off"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:elevation="3dp"
        android:onClick="onToggleClicked"
        android:stateListAnimator="@null"
        android:text="@string/set_alarm" />
</RelativeLayout>